--- a/templates/projects.html
+++ b/templates/projects.html
@@ -44,10 +44,10 @@
             </td>
             <td data-label="Links">
               {% if project['repo_url'] %}
-              <a class="btn secondary" href="{{ project['repo_url'] }}" target="_blank" rel="noopener">Repository</a>
+              <a class="btn secondary" href="{{ project['repo_url'] }}" target="_blank" rel="noopener">Frontend repo</a>
               {% endif %}
               {% if project['demo_url'] %}
-              <a class="btn" href="{{ project['demo_url'] }}" target="_blank" rel="noopener">Live demo</a>
+              <a class="btn" href="{{ project['demo_url'] }}" target="_blank" rel="noopener">Backend repo</a>
               {% endif %}
             </td>
           </tr>
